added more coverage and fixed all maintenance issues