@@ -1,31 +1,41 @@
 package com.fulfilment.application.monolith.warehouses.adapters.restapi;
 
 import com.fulfilment.application.monolith.warehouses.domain.WarehouseValidationException;
+import com.fulfilment.application.monolith.warehouses.domain.ports.ArchiveWarehouseOperation;
+import com.fulfilment.application.monolith.warehouses.domain.ports.CreateWarehouseOperation;
+import com.fulfilment.application.monolith.warehouses.domain.ports.WarehouseStore;
 import com.warehouse.api.WarehouseResource;
 import com.warehouse.api.beans.Warehouse;
-import jakarta.inject.Inject;
 import jakarta.ws.rs.WebApplicationException;
 import jakarta.validation.constraints.NotNull;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class WarehouseResourceImpl implements WarehouseResource {
 
-  @Inject com.fulfilment.application.monolith.warehouses.domain.ports.CreateWarehouseOperation createWarehouseOperation;
-  @Inject com.fulfilment.application.monolith.warehouses.domain.ports.ArchiveWarehouseOperation archiveWarehouseOperation;
-  @Inject com.fulfilment.application.monolith.warehouses.domain.ports.WarehouseStore warehouseStore;
+  private final CreateWarehouseOperation createWarehouseOperation;
+  private final ArchiveWarehouseOperation archiveWarehouseOperation;
+  private final WarehouseStore warehouseStore;
+
+  public WarehouseResourceImpl(
+      CreateWarehouseOperation createWarehouseOperation,
+      ArchiveWarehouseOperation archiveWarehouseOperation,
+      WarehouseStore warehouseStore) {
+    this.createWarehouseOperation = createWarehouseOperation;
+    this.archiveWarehouseOperation = archiveWarehouseOperation;
+    this.warehouseStore = warehouseStore;
+  }
 
   @Override
   public List<Warehouse> listAllWarehousesUnits() {
     return warehouseStore.listActive().stream()
         .map(this::toApi)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   public Warehouse createANewWarehouseUnit(@NotNull Warehouse data) {
     com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domain = toDomain(data);
-    if (domain.businessUnitCode == null || domain.businessUnitCode.isBlank()) {
+    if (domain.getBusinessUnitCode() == null || domain.getBusinessUnitCode().isBlank()) {
       throw new WebApplicationException("Warehouse id (business unit code) is required", 422);
     }
     try {
@@ -33,13 +43,14 @@ public class WarehouseResourceImpl implements WarehouseResource {
     } catch (WarehouseValidationException e) {
       throw new WebApplicationException(e.getMessage(), 400);
     }
-    return toApi(warehouseStore.findByBusinessUnitCode(domain.businessUnitCode));
+    return toApi(warehouseStore.findByBusinessUnitCode(domain.getBusinessUnitCode()));
   }
 
   @Override
   public Warehouse getAWarehouseUnitByID(String id) {
-    com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domain = warehouseStore.findByBusinessUnitCode(id);
-    if (domain == null || domain.archivedAt != null) {
+    com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domain = warehouseStore
+        .findByBusinessUnitCode(id);
+    if (domain == null || domain.getArchivedAt() != null) {
       throw new WebApplicationException("Warehouse unit not found", 404);
     }
     return toApi(domain);
@@ -47,7 +58,8 @@ public class WarehouseResourceImpl implements WarehouseResource {
 
   @Override
   public void archiveAWarehouseUnitByID(String id) {
-    com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domain = warehouseStore.findByBusinessUnitCode(id);
+    com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domain = warehouseStore
+        .findByBusinessUnitCode(id);
     if (domain == null) {
       throw new WebApplicationException("Warehouse unit not found", 404);
     }
@@ -60,19 +72,19 @@ public class WarehouseResourceImpl implements WarehouseResource {
 
   private Warehouse toApi(com.fulfilment.application.monolith.warehouses.domain.models.Warehouse d) {
     Warehouse w = new Warehouse();
-    w.setId(d.businessUnitCode);
-    w.setLocation(d.location);
-    w.setCapacity(d.capacity);
-    w.setStock(d.stock);
+    w.setId(d.getBusinessUnitCode());
+    w.setLocation(d.getLocation());
+    w.setCapacity(d.getCapacity());
+    w.setStock(d.getStock());
     return w;
   }
 
   private com.fulfilment.application.monolith.warehouses.domain.models.Warehouse toDomain(Warehouse api) {
     com.fulfilment.application.monolith.warehouses.domain.models.Warehouse d = new com.fulfilment.application.monolith.warehouses.domain.models.Warehouse();
-    d.businessUnitCode = api.getId();
-    d.location = api.getLocation();
-    d.capacity = api.getCapacity();
-    d.stock = api.getStock();
+    d.setBusinessUnitCode(api.getId());
+    d.setLocation(api.getLocation());
+    d.setCapacity(api.getCapacity());
+    d.setStock(api.getStock());
     return d;
   }
 }
